# Touch3D

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/cheerwizard/touch3d/: ExampleInstrumentedTest.kt  MathNativeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMain.cpp  Application.hpp  CMakeLists.txt  IOBuffer.hpp  LinuxMain.cpp  Log.hpp  Math.hpp  PlatformDefs.hpp  TestMath.cpp  Window.hpp  WindowsMain.cpp  android_main.cpp  linux_main.cpp  windows_main.cpp
app/src/main/cpp/android/: Activity.cpp  Activity.hpp  AndroidApp.cpp  AndroidApp.hpp  AndroidLog.cpp  AndroidMain.cpp  AndroidThread.cpp  AndroidWindow.cpp  Jni.cpp  Jni.hpp  MainActivity.cpp  MainActivity.hpp
app/src/main/cpp/linux/: LinuxApp.cpp  LinuxApp.hpp  LinuxLog.cpp  LinuxMemory.cpp  LinuxThread.cpp
app/src/main/cpp/src/: Application.hpp  BumpAllocator.cpp  BumpAllocator.hpp  Camera.cpp  Camera.hpp  DebugBreak.hpp  EventBuffer.hpp  GamepadCode.hpp  KeyCode.hpp  Log.cpp  Log.hpp  Math.h  Math.hpp  Memory.cpp  Memory.hpp  MemoryPool.cpp  MemoryPool.hpp  MouseCode.hpp  Renderer.hpp  RingBuffer.hpp  String.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp  Time.cpp  Time.hpp  Types.hpp  Vector.hpp  Window.hpp  sf.cpp  sf.hpp  sf_app.cpp  sf_app.hpp  sf_audio.cpp  sf_audio.hpp  sf_camera.cpp  sf_camera.hpp  sf_log.cpp  sf_log.hpp  (+6 more)
app/src/main/cpp/src/android/: AndroidMain.cpp  AndroidWindow.cpp  T3DActivity.cpp  T3DActivity.hpp
app/src/main/cpp/src/windows/: WindowsMain.cpp  WindowsWindow.cpp
app/src/main/cpp/tests/: TestMath.cpp  test_math.cpp
app/src/main/cpp/windows/: WindowsApp.cpp  WindowsApp.hpp  WindowsLog.cpp  WindowsMain.cpp  WindowsMemory.cpp  WindowsThread.cpp  WindowsWindow.cpp
app/src/main/java/com/cheerwizard/touch3d/: MainActivity.kt  NativeLog.kt  T3DApplication.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cheerwizard/touch3d/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
